--- a/RannaApp/RannaUI.csproj
+++ b/RannaApp/RannaUI.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
     <ProjectReference Include="..\EntityLayer\EntityLayer.csproj" />
+    <ProjectReference Include="..\RannaApi\RannaApi.csproj" />
   </ItemGroup>
 
 </Project>
